# ChangeLog for app-portage/profuse
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/profuse/Attic/ChangeLog,v 1.22 2005/06/02 14:36:33 dams Exp $

*profuse-0.22.0 (02 Jun 2005)

  02 Jun 2005; <dams@gentoo.org> +profuse-0.22.0.ebuild:
  new version, search feature in ncurses

  13 May 2005; Sven Wegener <swegener@gentoo.org> profuse-0.21.0.ebuild:
  Fixed invalid atoms in *DEPEND.

*profuse-0.21.0 (13 May 2005)

  13 May 2005; <dams@gentoo.org> +profuse-0.21.0.ebuild:
  version bump, console versions

*profuse-0.20.3 (09 May 2005)

  09 May 2005; <dams@gentoo.org> +profuse-0.20.3.ebuild:
  version bump
  correction of bug #91976

*profuse-0.20.2-r1 (08 May 2005)

  08 May 2005; <dams@gentoo.org> +profuse-0.20.2-r1.ebuild:
  depend on newer version of libconf

*profuse-0.20.2 (08 May 2005)

  08 May 2005; <dams@gentoo.org> +profuse-0.20.2.ebuild:
  version bump

  08 May 2005; <dams@gentoo.org> profuse-0.20.1.ebuild:
  corrected dependancy

*profuse-0.20.1 (08 May 2005)

  08 May 2005; <dams@gentoo.org> +profuse-0.20.1.ebuild:
  version bump

*profuse-0.20 (08 May 2005)

  08 May 2005; <dams@gentoo.org> +profuse-0.20.ebuild:
  version bump : lot of bugs corrections

  07 Mar 2005; Markus Rothe <corsair@gentoo.org> profuse-0.14.ebuild:
  Stable on ppc64

  18 Feb 2005; <dams@gentoo.org> :
  I messed the 0.18 tarball, here it should be allright

*profuse-0.18 (17 Feb 2005)

  17 Feb 2005; <dams@gentoo.org> +profuse-0.18.ebuild:
  require libconf-0.39.10

*profuse-0.17 (17 Feb 2005)

  17 Feb 2005; <dams@gentoo.org> +profuse-0.17.ebuild:
  version 0.17

*profuse-0.16 (15 Feb 2005)

  15 Feb 2005; <dams@gentoo.org> +profuse-0.16.ebuild:
  version 0.16

*profuse-0.15 (24 Jan 2005)

  24 Jan 2005; <dams@gentoo.org> +profuse-0.15.ebuild:
  new features, uses new libconf

  15 Jan 2005; Markus Rothe <corsair@gentoo.org> profuse-0.14.ebuild:
  Added ~ppc64 to KEYWORDS

*profuse-0.14 (10 Jan 2005)
