@@ -1,18 +1,18 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/profuse/Attic/profuse-0.22.0.ebuild,v 1.1 2005/06/02 14:36:33 dams Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/profuse/Attic/profuse-0.22.0.ebuild,v 1.2 2005/06/02 15:07:01 dams Exp $
 
 IUSE=""
 
 MY_P=${PN}-${PV}
 S=${WORKDIR}/${MY_P}
-DESCRIPTION="use flags and profile gtk2 editor, with good features and 3 GUIs."
+DESCRIPTION="use flags editor, with good features and 3 GUIs (dialog, ncurses and gtk2)."
 HOMEPAGE="http://libconf.net/profuse/"
 SRC_URI="http://libconf.net/profuse/download/${MY_P}.tar.bz2"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~x86 ~ppc ~sparc"
+KEYWORDS="x86 ppc ~sparc"
 IUSE="gtk ncurses"
 
 DEPEND="dev-lang/perl
